[project]
name = "ml-rain-tomorrow-prediction"
version = "0.1.0"
description = "Machine Learning Project for Rain Tomorrow Prediction"
authors = [
    { name = "Nijat Akhundzada", email = "nicataxundzada@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
