[project]
name = "ml-rain-tomorrow-prediction"
version = "0.1.0"
description = "Machine Learning Project for Rain Tomorrow Prediction"
authors = [
    { name = "Nijat Akhundzada", email = "nicataxundzada@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]


# --- Ruff configuration ---
[tool.ruff]
line-length = 95
target-version = "py314"


# Enable common linting rules
[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # bugbear (common bugs)
    "I",   # import sorting
]
ignore = ["B008"]
exclude = [
    "**/.git",
    "**/.ruff_cache",
    "**/.venv",
    "**/__pypackages__",
    "*/migrations/*", 
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"